# siminym-zh

./: .gitignore  README.md  build-all-db.js  build-db.js  build-db.sh  build-dict.sh  build.js  deno.json  package-lock.json  pyproject.toml  reduce.js  reduce.py  similars.py  words.lst
docs/: index.html  index.js  sw.js
docs/db/1000/: config.json  db.sqlite3.000
docs/db/10000/: config.json  db.sqlite3.000
docs/db/2000/: config.json  db.sqlite3.000
docs/db/20000/: config.json
docs/db/3000/: config.json  db.sqlite3.000
docs/db/30000/: config.json
docs/db/5000/: config.json  db.sqlite3.000
docs/db/50000/: config.json  db.sqlite3.001
docs/favicon/: site.webmanifest
src/: index.html  index.js  sw.js
